Update TestPie.java